welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:3: error: Missing closing brace `}' assumed here
override def run() {
^Diagonal:3: error: expected start of definition
override def run() {
         ^